<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/CardFragmentTheme"
    android:layout_marginBottom="5dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:layout_marginBottom="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/card_author_username"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_back"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_margin="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/ic_back"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/card_author_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/author_username"
        style="@style/Card"
        android:textAlignment="textStart"
        android:gravity="center_vertical"
        android:textSize="16sp"
        android:textColor="#000"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@id/card_author_insta"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/card_author_insta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/author_insta_username"
        style="@style/Card"
        android:textAlignment="textStart"
        android:gravity="center_vertical"
        android:textSize="16sp"
        android:textColor="#000"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@id/card_like"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/card_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/likes"
        style="@style/Card"
        android:layout_marginBottom="8dp"
        android:textAlignment="textStart"
        android:gravity="center_vertical"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/btn_download"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_download"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/download"
        style="@style/Card"
        android:textColor="#FFF"
        android:background="#E32526"
        android:layout_marginEnd="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/card_fav"/>
    
    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/card_fav"
        android:layout_width="55dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_download"
        android:button="@drawable/fav_card"/>
    
</androidx.constraintlayout.widget.ConstraintLayout>