<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/catalog_linear_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/catalog_toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:elevation="4dp"
        app:title="@string/photos" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_found"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_gravity="center|center_vertical"
        android:text="@string/found_text"
        android:textAlignment="center" />

    <androidx.cardview.widget.CardView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/error_message"
        android:layout_marginVertical="200dp"
        android:visibility="gone"
        android:layout_gravity="center_horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ошибка"
            android:layout_gravity="center|top"
            android:layout_marginTop="30dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_try_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Попробовать еще раз"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="60dp"/>
    </androidx.cardview.widget.CardView>
    
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/progress_text"
        android:textSize="18sp"
        android:textStyle="normal"
        android:visibility="gone"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"/>

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progress_bar_catalog"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:indeterminate="true"
        android:visibility="gone"
        android:layout_marginTop="20dp"
        style="@style/Widget.AppCompat.ProgressBar"
        android:indeterminateDrawable="@drawable/progress_gray"
        android:layout_gravity="center_horizontal"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_catalog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/rv_item"
        android:layout_marginTop="0dp"/>

</androidx.appcompat.widget.LinearLayoutCompat>